# TechEff

Achive/: CNumber.cpp  Constants.h
Lista1/Modyfikacja/: Mod  Mod.cpp  Mod.h
Lista1/Zad1/: Zadanie1  Zadanie1.cpp  Zadanie1.h
Lista1/Zad1/Zadanie1.dSYM/Contents/: Info.plist
Lista1/Zad2_3/: Zadanie2_3  Zadanie2_3.cpp
Lista1/Zad2_3/Zadanie2_3.dSYM/Contents/: Info.plist
Lista1/Zad4/: CTable  CTable.cpp  CTable.h  Procedures.cpp  Procedures.h  main  main.cpp
Lista2/: CNumber  CNumber.cpp  CNumber.h  main  main.cpp
Lista2/CNumber.dSYM/Contents/: Info.plist
Lista3/: CMakeLists.txt  Constants.h  Error.cpp  Error.h  ExpressionMenu.cpp  ExpressionReader.cpp  ExpressionReader.h  Node.cpp  Node.h  Result.cpp  Result.h  Tree.cpp  Tree.h  main.cpp
Lista4/: Error.h  ExpressionMenu.cpp  ExpressionMenu.h  Node.cpp  Result.h  ResultSaver.h  Tree.cpp  Tree.h
Lista5/: CMakeLists.txt  ExpressionMenu.cpp  ExpressionMenu.h  Main.cpp  MySmartPointer.h  Node.cpp  Node.h  RefCounter.cpp  RefCounter.h  Tree.cpp  Tree.h
Modification4/: CMakeLists.txt
Modyfikacja4/: Constants.h  Main.cpp  Result.h
SwiatecznaModyfikacja/: CMakeLists.txt  main.cpp
Zad1/: Zadanie1.cpp
Zad2_3/: Zadanie2_3  Zadanie2_3.cpp  Zadanie2_3.h
Zad4/: CTable.cpp  CTable.h  Procedures.cpp  main
Zad4/main.exec.dSYM/Contents/: Info.plist
miniProject/: CMakeLists.txt  GaussianGroupingEvaluatorFactory.cpp  GaussianGroupingEvaluatorFactory.h  GroupingChallenge.cpp  GroupingEvaluator.cpp  GroupingEvaluator.h  Optimizer.cpp  Optimizer.h  Point.cpp  Point.h
(+16 files in other folders)
